Change vertical align position, so <label> can be displayed correctly when there is a word break in it.

--- a/src/grids/css/grids-core.css
+++ b/src/grids/css/grids-core.css
@@ -59,7 +59,7 @@
     zoom: 1;
     letter-spacing: normal;
     word-spacing: normal;
-    vertical-align: top;
+    vertical-align: bottom;
     text-rendering: auto;
 }
 
